diffIT/force-app/main/default/objects/Account/fields/Charter_School__c.field-meta.xml
<CustomField>
    <fullName>Charter_School__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Imported from NCES database</description>
    <label>Charter School</label>
    <type>Checkbox</type>
</CustomField>