diffIT/force-app/main/default/objects/Account/fields/District_Status__c.field-meta.xml
<CustomField>
    <fullName>District_Status__c</fullName>
    <description>Imported from NCES database</description>
    <label>District Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Added</fullName>
            </value>
            <value>
                <fullName>Changed Boundary</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>