diffIT/force-app/main/default/objects/Account/fields/District_Type__c.field-meta.xml
<CustomField>
    <fullName>District_Type__c</fullName>
    <description>Imported from NCES database</description>
    <label>District Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Regional (RESA)</fullName>
            </value>
            <value>
                <fullName>Regular Local</fullName>
            </value>
            <value>
                <fullName>Specialized</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Supervisory Union</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>