diffIT/force-app/main/default/objects/Account/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <label>Institution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public School</fullName>
            </value>
            <value>
                <fullName>Charter School</fullName>
            </value>
            <value>
                <fullName>Private School</fullName>
            </value>
            <value>
                <fullName>Public District</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>