diffIT/force-app/main/default/objects/Account/fields/MDR_ID__c.field-meta.xml
<CustomField>
    <fullName>MDR_ID__c</fullName>
    <description>From MDR/NCES</description>
    <label>MDR ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>