diffIT/force-app/main/default/objects/Account/fields/NCES_ID__c.field-meta.xml
<CustomField>
    <fullName>NCES_ID__c</fullName>
    <description>From MDR/NCES</description>
    <externalId>true</externalId>
    <label>NCES ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>