diffIT/force-app/main/default/objects/Account/fields/Parent_NCES_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_NCES_ID__c</fullName>
    <description>From MDR/NCES</description>
    <label>Parent NCES ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>