diffIT/force-app/main/default/objects/Account/fields/School_Created_by_Form_Review__c.field-meta.xml
<CustomField>
    <fullName>School_Created_by_Form_Review__c</fullName>
    <inlineHelpText>Account was created on form submission when submitted couldn&apos;t find their school in the drop down. Needs review.</inlineHelpText>
    <label>School Created by Form Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>