diffIT/force-app/main/default/objects/Account/fields/State_ID__c.field-meta.xml
<CustomField>
    <fullName>State_ID__c</fullName>
    <description>Imported from NCES database</description>
    <label>State ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>