diffIT/force-app/main/default/objects/Account/fields/Student_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Student_Enrollment__c</fullName>
    <description>From MDR/NCES</description>
    <label>Student Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>