diffIT/force-app/main/default/objects/Account/fields/Student_Teacher_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Student_Teacher_Ratio__c</fullName>
    <formula>Student_Enrollment__c / Teachers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Teacher Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>