diffIT/force-app/main/default/objects/Account/fields/Teachers__c.field-meta.xml
<CustomField>
    <fullName>Teachers__c</fullName>
    <description>Imported from NCES database</description>
    <label>Teachers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>