diffIT/force-app/main/default/objects/Account/fields/ZIP_4_digit__c.field-meta.xml
<CustomField>
    <fullName>ZIP_4_digit__c</fullName>
    <description>Imported from NCES database</description>
    <label>ZIP 4-digit</label>
    <length>4</length>
    <type>Text</type>
</CustomField>